--- a/water-dashboard/package.json
+++ b/water-dashboard/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-responsive-modal": "^6.4.2",
